--- a/src/_includes/stylesheets/.vertical/horizontal.css
+++ b/src/_includes/stylesheets/.vertical/horizontal.css
@@ -25,6 +25,7 @@ p.vertical {
   margin: 1em 0;
 
   width: 100%;
+  height: max-content;
   max-height: max(461px, 61.8034vh); /* Same as in page.njk, φ⁻¹ */
   overflow-x: auto;
   overflow-inline: auto;
